--- a/style.css
+++ b/style.css
@@ -11,11 +11,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 input,
 button {
     padding: 10px;
     border: 1px solid black;
+}
+
+.input,
+.output {
+    padding: 10px;
 }
