--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    position: relative;
 }
 
 input,
@@ -20,8 +22,37 @@ select {
     border: 1px solid black;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .input,
 .output,
 .interaction {
     padding: 10px;
+}
+
+.input form div {
+    display: flex;
+    gap: 10px;
+}
+
+.interaction {
+    position: absolute;
+    bottom: 0px;
+}
+
+.interaction form {
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.interaction button {
+    width: 100%;
 }
