--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ select {
     gap: 10px;
 }
 
-.interaction form .error-msg {
+.interaction form .info {
     position: absolute;
     top: -20px;
 }
