--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 input,
 button,
 select {
-    padding: 10px;
+    padding: 7px;
     border: 1px solid black;
 }
 
@@ -56,12 +56,14 @@ select {
     justify-content: center;
     gap: 10px;
 }
-
+.interaction form div {
+    display: flex;
+    gap: 10px;
+}
 .interaction form .info {
     position: absolute;
     top: -20px;
 }
-
-.interaction button {
+.interaction form button {
     width: 100%;
 }
